Fix list item spacing issue
List items had both top and bottom margin, and it caused some inconsistent spacing for lists inside post content. This updates fixes the issue by only assigning top margin on list items except the first one.
refs: #787

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -345,9 +345,12 @@ ol {
 }
 
 li {
-    margin: 0.5em 0;
     padding-left: 0.3em;
     line-height: 1.6em;
+}
+
+li + li {
+    margin-top: 0.5em;
 }
 
 dt {
